testdata/baselines/reference/submodule/conformance/typeTagPrototypeAssignment.errors.txt
bug27327.js(4,15): error TS2352: Conversion of type 'number' to type 'string' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.


==== bug27327.js (1 errors) ====
    function C() {
    }
    /** @type {string} */
    C.prototype = 12
                  ~~
!!! error TS2352: Conversion of type 'number' to type 'string' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.
    